--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,7 @@
 }
 
 body {
+  padding: 20px;
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
